WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123222
SVGFilterBuilder should not be ref-counted.
https://bugs.webkit.org/show_bug.cgi?id=123222
Summary
SVGFilterBuilder should not be ref-counted.
Andreas Kling
Reported
2013-10-23 14:38:09 PDT
SVGFilterBuild is single-owner.
Attachments
Patch
(6.44 KB, patch)
2013-10-23 14:44 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-10-23 14:44:10 PDT
Created
attachment 214999
[details]
Patch
Anders Carlsson
Comment 2
2013-10-23 15:29:54 PDT
Comment on
attachment 214999
[details]
Patch is gud poch.
WebKit Commit Bot
Comment 3
2013-10-23 16:21:35 PDT
Comment on
attachment 214999
[details]
Patch Clearing flags on attachment: 214999 Committed
r157899
: <
http://trac.webkit.org/changeset/157899
>
WebKit Commit Bot
Comment 4
2013-10-23 16:21:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug