SVGFilterBuilder should not be ref-counted. <https://webkit.org/b/123222>

These objects are singly-owned and do not need ref counting.

Reviewed by Anders Carlsson.


Canonical link: https://commits.webkit.org/141342@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157899 268f45cc-cd09-0410-ab3c-d52691b4dbfc