Source/WebCore/rendering/FilterEffectRenderer.cpp
@@ -159,7 +159,7 @@ PassRefPtr<FilterEffect> FilterEffectRenderer::buildReferenceFilter(RenderElemen
     // wrong. We should probably be extracting the alpha from the 
     // previousEffect, but this requires some more processing.  
     // This may need a spec clarification.
-    RefPtr<SVGFilterBuilder> builder = SVGFilterBuilder::create(previousEffect, SourceAlpha::create(this));
+    auto builder = std::make_unique<SVGFilterBuilder>(previousEffect, SourceAlpha::create(this));
 
     auto attributesChildren = childrenOfType<SVGFilterPrimitiveStandardAttributes>(filter);
     for (auto it = attributesChildren.begin(), end = attributesChildren.end(); it != end; ++it) {
